fix spacing on company show

--- a/app/assets/stylesheets/companies.scss
+++ b/app/assets/stylesheets/companies.scss
@@ -3,14 +3,16 @@
 .company-profile-heading {
   text-align: center;
 
+
   h1 {
     text-align: center;
     margin-top: 65px;
+    margin-bottom: 0;
   }
 
-  span {
+  .company-profile-edit {
     display: inline-block;
-    padding-left: 10px;
+    margin-top: 0;
   }
 }
 
@@ -21,7 +23,7 @@
   img {
     width: 325px;
     height: 200px;
-    margin: 0 auto;
+    margin: 30px auto;
   }
 }
 
